Update install command to build frontend
Change install command to build without CI checks.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Install
         working-directory: frontend
-        run: yarn install 
+        run: CI=false yarn build 
 
       - name: Build
         working-directory: frontend
